# Advection-Diffusion-Codes

./: LICENSE  README.md
Advection/1D/: README.md
Advection/1D/FDM/: Makefile  README.md  plotscript  script
Advection/1D/FDM/include/: advection.h  initial-conditions.h  matforms.h  norms.h  output.h  utility.h
Advection/1D/FDM/source/: advection.cpp  initial-conditions.cpp  main.cpp  norms.cpp  output.cpp
Advection/1D/include/: advection.h  initial-conditions.h  output.h  utility.h
Advection/1D/source/: advection.cpp  initial-conditions.cpp  main.cpp
Advection/2D/FDM/: Makefile  README.md  animateAll  animationScript  gnuplotScript.tmp  log  log1  plotscript  x11script
Advection/2D/FDM/include/: advection.h  initial-conditions.h  matforms.h  norms.h  output.h  utility.h
Advection/2D/FDM/source/: advection.cpp  initial-conditions.cpp  main.cpp  norms.cpp  output.cpp
Diffusion/1D/: Makefile  README.md
Diffusion/1D/FDM/: 1D Diffusion Convergence Tables.ods  README.md  animationScript  plotscript
Diffusion/1D/FDM/LaTeXTables/: fourierSquare-BDF2.tex  fourierSquare-backwardEuler.tex  fourierSquare-crankNicolson.tex  (+6 more)
Diffusion/1D/FEM/: diffusion-1d.py
Diffusion/1D/FEM/deal.ii/: CMakeLists.txt
Diffusion/1D/FEM/deal.ii/include/: initial_conditions.hpp
Diffusion/1D/FEM/deal.ii/source/: main.cpp
Diffusion/1D/source/: main.cpp
Diffusion/2D/: Makefile  README.md
Diffusion/2D/FDM/: README.md  animationScript  plotscript
Diffusion/2D/FEM/: diffusion-2d.py
Diffusion/2D/include/: diffusion.h
Diffusion/2D/source/: initial-conditions.cpp  main.cpp
(+146 files in other folders)
